Fix crash when deleting a session

BUG: 392817